--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,23 +4,13 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [16.x]
 
     steps:
-      - name: Install GNOME Shell extensions tool
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gnome-shell-extensions
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: nodejs gnome-shell-extensions
 
       - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: npm ci
