--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format:check": "prettier --check .",
     "lint": "eslint .",
     "build": "gnome-extensions pack --force .",
-    "install": "mkdir -p ~/.local/share/gnome-shell/extensions/no-titlebar-when-maximized@alec.ninja && cp extension.js metadata.json ~/.local/share/gnome-shell/extensions/no-titlebar-when-maximized@alec.ninja"
+    "install": "gnome-extensions install --force ./no-titlebar-when-maximized@alec.ninja.shell-extension.zip",
+    "uninstall": "gnome-extensions uninstall no-titlebar-when-maximized@alec.ninja"
   },
   "repository": {
     "type": "git",
